# fem

./: CMakeLists.txt
include/: array.hpp  ctmath.hpp  field.hpp  fraction.hpp  polynomial.hpp  polynomial_utils.hpp
src/basis/: basis.cpp
src/test/: test.cpp
